--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "test": "jasmine-ts",
     "tsc": "tsc"
   },
-  "author": "Udacity",
+  "author": "Eric Anku",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
     "body-parser": "^1.19.0",
-    "typescript": "^4.1.3",
-    "pg": "^8.5.1"
+    "express": "^4.17.1",
+    "pg": "^8.5.1",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.9",
+    "@types/express": "^4.17.17",
     "@types/jasmine": "^3.6.3",
     "@types/pg": "^7.14.7",
     "jasmine": "^3.6.4",
