--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "Eric Anku",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "db-migrate": "^0.11.13",
     "db-migrate-pg": "^1.2.2",
     "dotenv": "^16.0.3",
@@ -22,8 +24,10 @@
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "^3.6.3",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/pg": "^7.14.11",
     "jasmine": "^3.6.4",
     "jasmine-spec-reporter": "^6.0.0",
