--- a/package.json
+++ b/package.json
@@ -21,18 +21,26 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.5.1",
-    "typescript": "^4.1.3"
+    "supertest": "^6.3.3",
+    "swagger-ui-express": "^4.6.0",
+    "typescript": "^4.9.5",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "^3.6.3",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/node": "^18.13.0",
     "@types/pg": "^7.14.11",
+    "@types/supertest": "^2.0.12",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/yamljs": "^0.2.31",
     "jasmine": "^3.6.4",
     "jasmine-spec-reporter": "^6.0.0",
     "jasmine-ts": "^0.3.0",
-    "ts-node": "^9.1.1",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "tsc-watch": "^4.2.9"
   }
 }
