--- a/src/api_docs.yml
+++ b/src/api_docs.yml
@@ -3,7 +3,7 @@ info:
   title: 'Store Backend API'
   version: '1.0'
 servers:
-  - url: localhost:3000
+  - url: http://localhost:3000
 paths:
   /products:
     get:
