--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "ts-node-esm src/server.ts",
     "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess \"node ./dist/server.js\"",
-    "test": "ENV=test && npx tsc && db-migrate --env test up && jasmine && db-migrate db:drop test",
+    "test": "ENV=test & npx tsc & db-migrate --env test up & jasmine-ts & db-migrate db:drop test",
     "tsc": "tsc"
   },
   "author": "Eric Anku",
@@ -42,5 +42,8 @@
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tsc-watch": "^4.2.9"
+  },
+  "optionalDependencies": {
+    "win-node-env": "^0.6.1"
   }
 }
